styles(banner): fixed overflow for banner in tablet

--- a/src/css/sections/banner.css
+++ b/src/css/sections/banner.css
@@ -19,6 +19,7 @@
   .banner-inner {
     border-radius: 30px;
     padding: 64px 32px;
+    overflow: visible;
   }
 }
 
